--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,25 @@
     margin: auto;
     width: 200px;
     height: 100px;
-  }
+}
 
-  .reloadButton {
+.reloadButton {
     position: absolute;
     top: 2.5%;
     right: 1.5%;
     color: white;
     background: white;
     border: 0px solid;
-  }
-  .btn-icon {
+}
+
+.btn-icon {
     position: relative;
 
-    height: 25px; /* adjust as needed */
-    width: 25px; /* adjust as needed */
-  }
+    height: 25px;
+    /* adjust as needed */
+    width: 25px;
+    /* adjust as needed */
+}
 
 /*basic reset*/
 * {
@@ -44,8 +47,8 @@ body {
     text-align: center;
     position: relative;
     margin-top: 30px;
-    height:100%;
-    width:100%;
+    height: 100%;
+    width: 100%;
 
 }
 
@@ -69,7 +72,8 @@ body {
 }
 
 /*inputs*/
-#myForm input, #myForm textarea {
+#myForm input,
+#myForm textarea {
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -81,7 +85,8 @@ body {
     font-size: 13px;
 }
 
-#myForm input:focus, #myForm textarea:focus {
+#myForm input:focus,
+#myForm textarea:focus {
     -moz-box-shadow: none !important;
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
@@ -106,7 +111,8 @@ body {
     margin: 10px 5px;
 }
 
-#myForm .action-button:hover, #myForm .action-button:focus {
+#myForm .action-button:hover,
+#myForm .action-button:focus {
     box-shadow: 0 0 0 2px white, 0 0 0 3px #2098ce;
 }
 
@@ -122,7 +128,8 @@ body {
     margin: 10px 5px;
 }
 
-#myForm .action-button-previous:hover, #myForm .action-button-previous:focus {
+#myForm .action-button-previous:hover,
+#myForm .action-button-previous:focus {
     box-shadow: 0 0 0 2px white, 0 0 0 3px #aCbEd0;
 }
 
@@ -142,6 +149,7 @@ body {
     color: #666;
     margin-bottom: 20px;
 }
+
 .fs-subtitle-instruction {
     font-weight: normal;
     font-size: 11px;
@@ -191,7 +199,8 @@ body {
     position: absolute;
     left: -50%;
     top: 9px;
-    z-index: -1; /*put it behind the numbers*/
+    z-index: -1;
+    /*put it behind the numbers*/
 }
 
 #progressbar li:first-child:after {
@@ -201,7 +210,8 @@ body {
 
 /*marking active/completed steps blue*/
 /*The number of the step and the connector before it = blue*/
-#progressbar li.active:before, #progressbar li.active:after {
+#progressbar li.active:before,
+#progressbar li.active:after {
     background: #2098ce;
     color: white;
 }
@@ -212,8 +222,61 @@ body {
     border-top: 16px solid #3498db;
     width: 120px;
     height: 120px;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
+    -webkit-animation: spin 2s linear infinite;
+    /* Safari */
     animation: spin 2s linear infinite;
-  }
-  
-  
+}
+
+
+
+.checkmark__circle {
+    stroke-dasharray: 166;
+    stroke-dashoffset: 166;
+    stroke-width: 2;
+    stroke-miterlimit: 10;
+    stroke: #7ac142;
+    fill: none;
+    animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards
+}
+
+.checkmark {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    stroke-width: 2;
+    stroke: #fff;
+    stroke-miterlimit: 10;
+    box-shadow: inset 0px 0px 0px #7ac142;
+    animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both
+}
+
+.checkmark__check {
+    transform-origin: 50% 50%;
+    stroke-dasharray: 48;
+    stroke-dashoffset: 48;
+    animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards
+}
+
+@keyframes stroke {
+    100% {
+        stroke-dashoffset: 0
+    }
+}
+
+@keyframes scale {
+
+    0%,
+    100% {
+        transform: none
+    }
+
+    50% {
+        transform: scale3d(1.1, 1.1, 1)
+    }
+}
+
+@keyframes fill {
+    100% {
+        box-shadow: inset 0px 0px 0px 30px #7ac142
+    }
+}
